--- a/public/css/layouts.css
+++ b/public/css/layouts.css
@@ -47,30 +47,7 @@
   margin-bottom: 30px;
 }
 
-/* header */
-
-/* footer */
-
-/* index */
-.toppage {
-  padding-top: 5%;
-}
-
-/* mypage */
-.mypage {
-  padding-top: 50px;
-}
-
-
-.mypage-img {
-  position: relative;
-  width: 100%;
-  max-height: 600px;
-  overflow: hidden;
-}
-
-/* index & mypage navbar */
-
+/* posts.index */
 .scroll-nav ul {
 	font-size: 0;
 	box-sizing: border-box;
@@ -104,7 +81,7 @@
 
 .scroll-nav {
   /* スクロールバーを見えなくするため */
-  height: 48px; /* 実際に表示する高さ */
+  height: 32px; /* 実際に表示する高さ */
   overflow-y: hidden;
 }
 
@@ -131,7 +108,6 @@
 
 .scroll-nav a {
   display: block;
-  padding: 12px;
   /* 文字列の自動改行を禁止 */
   white-space: nowrap;
 }
@@ -175,6 +151,14 @@
 
   .container {
     max-width: 540px;
+  }
+
+  .scroll-nav__item {
+    padding: 7px;
+  }
+
+  .scroll-nav {
+    height: 40px;
   }
 }
  
