posts.indexのレイアウトを変更

--- a/public/css/layouts.css
+++ b/public/css/layouts.css
@@ -48,99 +48,119 @@
 }
 
 /* posts.index */
-.scroll-nav ul {
-	font-size: 0;
-	box-sizing: border-box;
-	width: 100%;
-	padding: 4px;
-	list-style: none;
-	text-align: center;
+.cp_qa *, .cp_qa *:before, .cp_qa *:after {
+	font-family: 'FontAwesome', sans-serif;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
-.scroll-nav li {
-	font-size: 16px;
-	margin: 0 8px;
+.cp_qa {
+	margin: 0 auto;
+	background: #ffffff;
+}
+.conttabs {
+	display: none;
+}
+/* カテゴリー */
+.cp_qa #cp_content1,
+.cp_qa #cp_content2,
+.cp_qa #cp_content3,
+.cp_qa #cp_content4,
+.cp_qa #cp_content5 {
+	display: none;
+	padding: 20px 0 0;
+	border-top: 1px solid #dddddd;
+}
+.cp_qa label.cp_tabitem {
 	display: inline-block;
+	margin: 0 0 -1px;
+	padding: 15px 25px;
+	text-align: center;
+	color: #bbbbbb;
+	border: 1px solid transparent;
 }
-.scroll-nav li a {
-	text-decoration: none;
-	padding-bottom: 3px; /* 文字と下線に隙間を作る */
-	color: #000;
-	display: block;
+.cp_qa label.cp_tabitem:before {
+	margin-right: 10px;
 }
-.scroll-nav li a:after {
-	content: '';
-	width: 0;
-	transition: all 0.3s ease;
-	border-bottom: 3px solid #000;
-	display: block;
+.cp_qa label.cp_tabitem:hover {
+	cursor: pointer;
+	color: #888888;
 }
-.scroll-nav li a:hover:after {
-	width: 100%;
-	border-bottom: 3px solid #000;
+.cp_qa input:checked + label {
+	color: #555555;
+	border: 1px solid #dddddd;
+	border-bottom: 1px solid #ffffff;
 }
-
-.scroll-nav {
-  /* スクロールバーを見えなくするため */
-  height: 32px; /* 実際に表示する高さ */
-  overflow-y: hidden;
+/* --ブロックのバーの色 */
+.cp_qa input:checked + label[for*='1'] {
+	border-top: 5px solid #00BCD4;
 }
-
-/* 中身がスクロールするビュー */
-.scroll-nav__view {
-  -webkit-overflow-scrolling: touch;
-  overflow-x: scroll;
+.cp_qa input:checked + label[for*='2'] {
+	border-top: 5px solid #FF5722;
 }
-
-/* 実際にスクロールするオブジェクト */
-.scroll-nav__list {
-  /* tableにすることで、横幅指定をすることなくmargin: autoによる中央寄せが可能になる */
-  display: table;
-  list-style: none;
-  margin: 0 auto;
-  /* 下方向に余分なpadding部分を持たせ、そこにスクロールバーが表示される */
-  padding: 0 0 24px 0;
+.cp_qa input:checked + label[for*='3'] {
+	border-top: 5px solid #03A9F4;
 }
-
-.scroll-nav__item {
-  /* itemを横並びに、かつ親要素がその親要素の横幅からはみだすことが可能になる */
-  display: table-cell;
+.cp_qa input:checked + label[for*='4'] {
+	border-top: 5px solid #E91E63;
 }
-
-.scroll-nav a {
+.cp_qa input:checked + label[for*='5'] {
+	border-top: 5px solid #000000;
+}
+@media screen and (max-width: 650px) {
+	.cp_qa label.cp_tabitem {
+		font-size: 0;
+	}
+	label:before {
+		font-size: 18px;
+		margin: 0;
+	}
+}
+@media screen and (max-width: 400px) {
+	.cp_qa label.cp_tabitem {
+		padding: 15px;
+	}
+	.cp_qa label.cp_tabitem:before {
+		margin-right: 0px;
+	}
+}
+/* QAブロック */
+.cp_qa #cp_conttab1:checked ~ #cp_content1,
+.cp_qa #cp_conttab2:checked ~ #cp_content2,
+.cp_qa #cp_conttab3:checked ~ #cp_content3,
+.cp_qa #cp_conttab4:checked ~ #cp_content4,
+.cp_qa #cp_conttab5:checked ~ #cp_content5 {
   display: block;
-  /* 文字列の自動改行を禁止 */
-  white-space: nowrap;
+}
+.cp_qa .cp_qain {
+	overflow-x: hidden;
+	margin: 0 auto;
+	color: #333333;
+}
+.cp_qa .cp_qain .cp_actab {
+	padding: 20px 0;
+	border-bottom: 1px dotted #cccccc;
 }
 
-/* 以下サンプル用デザイン */
-
-.scroll-nav {
-  background: rgb(255, 255, 255);
+/* posts.index questionList */
+.questionList-right p {
+  text-align: center;
 }
 
-.scroll-nav a {
-  color: rgb(255, 255, 255);
-  font-family: sans-serif;
-  font-size: 14px;
-  /* 行高が24pxになるように調整 24/14 */
-  line-height: 1.71428;
-  text-decoration: none;
+.ans-count-num {
+  font-size: 30px;
+  font-weight: bold;
 }
 
+.title-layouts {
+  text-align: left;
+}
 
-
-
+.is_solved-lavel {
+  font-size: medium; 
+}
 
 @media only screen and (min-width: 771px) { /* PCサイズでの指定 */
-.scroll-nav ul {
-  padding: 0;
-}
-.scroll-nav ul li {
-  width: 14.2%; /* メニューの個別の幅 */
-}
-.next-btn {
-  display: none; /* 右側の固定部分を非表示 */
-}
+
 }
 
 /* Extra small devices: Phones (<576px) */
@@ -153,12 +173,13 @@
     max-width: 540px;
   }
 
-  .scroll-nav__item {
-    padding: 7px;
+  .is_solved-lavel {
+    font-size: x-small; 
   }
 
-  .scroll-nav {
-    height: 40px;
+  .ans-count-num {
+    font-size: 20px;
+    font-weight: bold;
   }
 }
  
